--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ script:
 - npm run check
 - npm run build
 - npm run validate
+after_success:
+- npm run coveralls
 deploy:
   provider: npm
   email: ken@kendaleiv.com
