--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "audit": "nsp check package",
     "build": "babel -d ./ ./src",
     "check": "npm run audit && npm outdated --depth 0",
-    "coverage": "nyc --require babel-core/register --reporter=lcov --reporter=text --reporter=html npm test",
+    "coverage": "jest --coverage",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls && rm -rf ./coverage",
     "lint": "eslint src test",
-    "test": "ava",
-    "test:watch": "chokidar 'test/*.js' 'src/**' -c 'npm test' --silent --initial",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "validate": "npm run lint && npm test",
     "prepare": "npm run build && npm run validate && npm run check"
   },
@@ -36,16 +36,14 @@
     "url": "http://kendaleiv.com"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
     "babel-eslint": "^7.0.0",
     "babel-plugin-transform-function-bind": "^6.5.2",
     "babel-preset-es2015": "^6.3.13",
-    "chokidar-cli": "^1.2.0",
     "coveralls": "^2.11.6",
     "eslint": "^3.2.2",
-    "nsp": "^2.2.0",
-    "nyc": "^10.0.0"
+    "jest": "^17.0.3",
+    "nsp": "^2.2.0"
   }
 }
