--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
     "babel-eslint": "^7.0.0",
+    "babel-jest": "^17.0.2",
     "babel-plugin-transform-function-bind": "^6.5.2",
     "babel-preset-es2015": "^6.3.13",
     "coveralls": "^2.11.6",
